--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -22,12 +22,14 @@ body {
   width: 100%;
   outline: none;
   border: none;
+  margin: auto; 
 }
 
 .note-textarea {
   resize: none;
   height: calc(100% - 63px);
   padding-top: 15px;
+  margin: auto;
 }
 
 .note-title {
